	socklnd   - any kernel supported by Lustre,
	qswlnd    - Qsnet kernel modules 5.20 and later,
	openiblnd - IbGold 1.8.2,
	o2iblnd   - OFED 1.1 and 1.2.0, 1.2.5
	viblnd    - Voltaire ibhost 3.4.5 and later,
	ciblnd    - Topspin 3.2.0,
	iiblnd    - Infiniserv 3.3 + PathBits patch,
	gmlnd     - GM 2.1.22 and later,
	mxlnd     - MX 1.2.1 or later,
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
Severity   : normal
Bugzilla   : 14956
Description: High load after starting lnet
Details    : gmlnd should sleep in rx thread in interruptible way. Otherwise,
	     uptime utility reports high load that looks confusingly.

Severity   : normal
Bugzilla   : 14838
Description: ksocklnd fails to establish connection if accept_port is high
Details    : PID remapping must not be done for active (outgoing) connections

--------------------------------------------------------------------------------

2008-01-11  Sun Microsystems, Inc.
       * version 1.4.12
       * Support for networks:
	socklnd   - any kernel supported by Lustre,
	qswlnd    - Qsnet kernel modules 5.20 and later,
	openiblnd - IbGold 1.8.2,
	o2iblnd   - OFED 1.1 and 1.2.0, 1.2.5
	viblnd    - Voltaire ibhost 3.4.5 and later,
	ciblnd    - Topspin 3.2.0,
	iiblnd    - Infiniserv 3.3 + PathBits patch,
	gmlnd     - GM 2.1.22 and later,
	mxlnd     - MX 1.2.1 or later,
	ptllnd    - Portals 3.3 / UNICOS/lc 1.5.x, 2.0.x
Severity   : normal
Bugzilla   : 14387
Description: liblustre network error
Details    : liblustre clients should understand LNET_ACCEPT_PORT environment
	     variable even if they don't start lnet acceptor.

Severity   : normal
Bugzilla   : 14300
Description: Strange message from lnet (Ignoring prediction from the future)
Details    : Incorrect calculation of peer's last_alive value in ksocklnd

--------------------------------------------------------------------------------

2007-12-07         Cluster File Systems, Inc. <info@clusterfs.com>
       * version 1.6.4
       * Support for networks: